imges overflow fixed

--- a/style/header.css
+++ b/style/header.css
@@ -13,21 +13,21 @@ header {
 .banner {
   position: relative;
   width: 78%;
-  height: 26.8vh;
-  overflow: hidden; /*FIRST OVERFLOW*/
+  height: 26.8vh; /*FIRST OVERFLOW*/
   margin: 0 auto;
   z-index: 0;
+  overflow: clip;
+  overflow-y: visible;
 }
 
 .carousel {
   display: flex;
   width: 500%;
   height: 100%;
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   transition: transform 0.5s ease-in-out;
-  z-index: 0;
 }
 
 .slide {
@@ -45,6 +45,7 @@ header {
   border-radius: 35px;
   height: 100%;
   width: 100%;
+  position: relative;
 }
 .slide2 {
   background: linear-gradient(
@@ -121,12 +122,11 @@ header {
   font-weight: 500;
 }
 #space-station {
-  width: 53%;
+  width: 52.7%;
   position: sticky;
   top: 0%;
   left: 48%;
   transform: translate(0%, 0%);
-  object-fit: contain;
   border-radius: 35px;
 }
 #space-bunny {
@@ -136,6 +136,7 @@ header {
   left: 65%;
   transform: translate(25%, 0%);
   animation: fluttua 7s ease-in-out infinite;
+  z-index: 10;
 }
 
 /* SLIDE 2 */
@@ -154,7 +155,7 @@ header {
   font-size: 20px;
 }
 #slide2-bunny {
-  width: 27%;
+  width: 26.9%;
   position: absolute;
   top: -18%;
   left: 65%;
@@ -184,8 +185,8 @@ header {
   top: -30%;
   left: 73%;
   transform: translate(25%, 0%);
-  animation: fluttua 6s ease-in-out infinite;
-  z-index: 100;
+  animation: fluttua 5s ease-in-out infinite;
+  z-index: 1;
 }
 @keyframes fluttua {
   0% {
